2007-05-27  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.3.18.

2007-05-27  Sven Neumann  <sven@gimp.org>

	* Made 2.3.17 development release.

2007-05-27  Michael Natterer  <mitch@gimp.org>

	* app/core/gimp-utils.[ch] (gimp_container_get_neighbor_of_active):
	new utility function which returns the neighbor of a container's
	active item.

	* app/widgets/gimpcontainerview-utils.[ch]
	(gimp_container_view_remove_active): remove a container view's
	active item, using above function to select its neighbor.

	* app/actions/data-commands.c
	* app/actions/buffers-commands.c
	* app/actions/documents-commands.c
	* app/actions/templates-commands.c: use above functions to select
	reasonable items when deleting from a list (instead of always
	jumping to the first item).

2007-05-26  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpwidgets.c (gimp_coordinates_new): update the
	original width and height when the chain-button is changed to the
	active state.

2007-05-26  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpsizebox.c (GimpSizeBoxPrivate): removed unused
	struct member.

2007-05-26  Michael Natterer  <mitch@gimp.org>

	* libgimpcolor/gimprgb.c (gimp_param_rgb_values_cmp): fully
	initialize all bytes of "int1" and "int2" so we don't produce
	wrong color compare results (and shut up valgrind).
	Fixes bug #353696.

2007-05-26  Michael Natterer  <mitch@gimp.org>

	* app/config/gimpdisplayconfig.c (gimp_display_config_class_init):
	also initialize alpha of xor-color's default value to stop
	valgrind from complaining about uninitialized memory.

2007-05-26  Sven Neumann  <sven@gimp.org>

	* app/dialogs/layer-options-dialog.c: do not only declare
	layer_options_dialog_free(), but do actually use it.

2007-05-25  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/script-fu-text-console.c
	* plug-ins/script-fu/script-fu.c
	* plug-ins/script-fu/scheme-wrapper.c
	* plug-ins/script-fu/scheme-wrapper.h: Applied patch from Eric