@@ -1,3 +1,7 @@
+2007-05-28  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/gauss.c: clamp to [0;255]. Fixes bug #441681.
+
 2007-05-27  Sven Neumann  <sven@gimp.org>
 
 	* configure.in: bumped version to 2.3.18.
